-The RETE can now get an initial (though still buggy) alpha network -RETE_printer can use JGraphX to print the RETE graph onto a new window

--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
 	
 	<!-- Add external JARs (antlr, ...)  to classpath -->
 	<path id="master-classpath">
-		<fileset dir="external">
+		<fileset dir="lib">
 			<include name="*.jar"/>
 		</fileset>
 	</path>
